--- a/public/assets/manifest.yml
+++ b/public/assets/manifest.yml
@@ -1,9 +1,8 @@
 ---
-blackGradBG.png: blackGradBG-f45682e616ddb2dffaf8b1a2ea5e43fd.png
 deafultProfilePic.png: deafultProfilePic-d2537e92dd09e579865085519b3eace2.png
 homeLink.png: homeLink-4c2a8de9720118936681097705409473.png
 homeLink2.png: homeLink2-fee32526d104890e68ee2f3784005a45.png
 rails.png: rails-be8732dac73d845ac5b142c8fb5f9fb0.png
-websiteFlame_BG.jpg: websiteFlame_BG-b8d4fdba6a5bd36db07be4ba7c160076.jpg
+websiteFlame_BG02.jpg: websiteFlame_BG02-ba65fc025885a9e2f1f53414ab2ab7bc.jpg
 application.js: application-2c96ff22fa91aebafffd8c12c8c463e7.js
-application.css: application-7419cce61c1839cf90ed7d8e7207b736.css
+application.css: application-59caa62d5c3a60d76a3b675adb4b8942.css
