--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,5 @@
 db/*.sqlite3
 log/* .log
 tmp/
- /public/documents/* .sass-cache/* /config/s3.yml .public/assets/*
+ /public/documents/* .sass-cache/* s3.yml .public/assets/*
+
